loaded webcam into webgl context

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <video id="remoteVideo" style="display:none"></div>
 
 <script src="./js/three.js"></script>
+<script src="js/shaders/CopyShader.js"></script>
+<script src="js/shaders/DotScreenShader.js"></script>
+<script src="js/shaders/RGBShiftShader.js"></script>
+<script src="js/shaders/KaleidoShader.js"></script>
+<script src="js/shaders/DigitalGlitch.js"></script>
+<script src="js/shaders/BlendShader.js"></script>
+<script src="js/postprocessing/EffectComposer.js"></script>
+<script src="js/postprocessing/RenderPass.js"></script>
+<script src="js/postprocessing/MaskPass.js"></script>
+<script src="js/postprocessing/ShaderPass.js"></script>
 <script src="./compiled.js"></script>
 
 </body>
