working dot+color webcam

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
 <div id="container"></div>
-<video id="localVideo" muted style="display:none"></div>
-<video id="remoteVideo" style="display:none"></div>
+<div id="localVideo" muted style="display:none"></div>
+
 
 <script src="./js/three.js"></script>
 <script src="js/shaders/CopyShader.js"></script>
@@ -20,6 +20,7 @@
 <script src="js/postprocessing/RenderPass.js"></script>
 <script src="js/postprocessing/MaskPass.js"></script>
 <script src="js/postprocessing/ShaderPass.js"></script>
+<script src="js/postprocessing/TexturePass.js"></script>
 <script src="./compiled.js"></script>
 
 </body>
