--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <script src="js/shaders/GlassWarp.js"></script>
 <script src="js/shaders/Experiment.js"></script>
 <script src="js/shaders/CheckerBoard.js"></script>
-<script src="js/shaders/Ascii.js"></script>
+<script src="js/shaders/ASCII.js"></script>
 <script src="js/shaders/DifferenceMirrorShader.js"></script>
 <script src="js/postprocessing/EffectComposer.js"></script>
 <script src="js/postprocessing/RenderPass.js"></script>
