--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
   <div></br>[click]</div>
 </div>
 <div id="instructions" style="visibility:hidden">
-<div></br>^ click allow</br></br></br></div>
-<div><p>&#8592;  &#8594; to change effects</p></div>
-<div><p>"g"  to make a GIF<p></div>
-<div>"s" to take a screenshot</div>
+<div id="blinky" style="text-decoration: blink; color: #cc00ff; text-align: left; position: absolute; top: 10px">^ click allow</br></div>
+</br> <p> &#8592;  &#8594; to change effects</p>
+      <p>"g"  to make a GIF<p>
+      "s" to take a screenshot
+      </br> </br>"i" to show/hide these instructions
 <div id="by">by <a href="https://ojack.github.io">olivia</a></div>
 </div>
 </div>
@@ -79,6 +80,7 @@
 <script src="./js/gif.js"></script>
 <script src="js/shaders/CopyShader.js"></script>
 <script src="js/shaders/DotScreenShader.js"></script>
+<script src="js/shaders/ColorExperimentShader.js"></script>
 <script src="js/shaders/RGBShiftShader.js"></script>
 <script src="js/shaders/KaleidoShader.js"></script>
 <script src="js/shaders/ColorEffectShader.js"></script>
