--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
-
+<title>selfie apocalypse</title>
+ <meta property="og:image" content="https://raw.githubusercontent.com/ojack/selfie-apocalypse/master/images/fb-purple.png" />
 <style type="text/css">
   html, body {
    padding: 0px;
